# xypattern

./: .gitignore  CHANGELOG.md  README.md  build.py  pyproject.toml
.github/workflows/: CD.yml  CD_linux.yml  CD_macos.yml  CD_windows.yml  CI.yml  testing.yml
tests/: test_combine.py  test_pattern.py  test_pattern_dioptas.py  test_pattern_glassure.py  test_signal.py  test_smooth_bruckner.py  test_util.py
xypattern/: __init__.py  auto_background.py  combine.py  pattern.py
