[tool.poetry]
name = "xypattern"
version = "0.1.0"
description = ""
authors = ["Clemens Prescher <clemens.prescher@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10, <3.13"
numpy = "^1.26.0"
scipy = "^1.11.3"


[tool.poetry.group.dev.dependencies]
cython = "^3.0.3"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
setuptools = { version = "^68.2.2", python = "^3.12" }

[tool.poetry.scripts]
stitch_patterns = "xypattern.scripts.stitch_patterns:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
